# Binary-App

./: .gitignore  README.md  TESTING.md  db.sqlite3  db_fresh.sqlite3  pyproject.toml  restore_tree.py
.cursor/rules/: final_mdc_binary_referral_commerce_system.md
bonuses/: admin.py  models.py
bonuses/migrations/: 0001_initial.py
core/: api_urls.py  api_views.py  settings.py  urls.py
core/tests/: test_api_views.py
dashboard/: urls.py  views.py
docs/: API.md  ToDo.md  celery-dev.md  decay cutoff.txt
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx
orders/: admin.py  models.py
orders/migrations/: 0001_initial.py  0002_shipping_and_order_fields.py
payouts/: admin.py  models.py
payouts/migrations/: 0001_initial.py
products/: admin.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_add_product_name_category.py  0003_add_full_description_discount_sale.py  0004_add_product_image.py
sellers/: admin.py  models.py
sellers/migrations/: 0001_initial.py  0002_store_description.py
static/css/: theme.css
tasks/: admin.py  models.py  tasks.py
tasks/migrations/: 0001_initial.py
templates/: base.html
templates/auth/: login.html  signup.html
templates/dashboard/: _bonus_events_fragment.html  _tree_fragment.html  dashboard.html
templates/storefront/: home.html
tree/: admin.py  models.py
tree/migrations/: 0001_initial.py
users/: admin.py  models.py  urls.py  views.py
(+71 files in other folders)
